test/compile-fail/resolution/type-existence/not-trait/expected.txt
error: expected trait, found type `b`
  ┌─ ./test/compile-fail/resolution/type-existence/not-trait/top.rhdl:1:13
  │
1 │ struct a<T: b> {}
  │             ^ not a trait

